# amesa-agents

./: .gitignore  .mcp.json  AGENTS.md  CLAUDE.md  README.md
.claude/agents/: hicks.md  hudson.md  ralph.md  scribe.md
.squad/: .first-run  routing.md  team.md
.squad/agents/hicks/: charter.md  history.md
.squad/agents/hudson/: charter.md  history.md
.squad/agents/ralph/: history.md
.squad/agents/scribe/: charter.md  history.md
.squad/casting/: history.json  registry.json
.squad/identity/: now.md  wisdom.md
agent-context/: amesa-mcp-tool-specifications.md
agents/controllers/: creating-and-publishing-controllers.md
agents/controllers/controller-example/controller_example/: controller.py
agents/orchestrators/: creating-and-publishing-orchestrators.md
agents/orchestrators/orchestrator-example/: pyproject.toml
agents/orchestrators/orchestrator-example/orchestrator_example/: teacher.py
agents/selectors/: creating-and-publishing-selectors.md
agents/teachers/: creating-and-publishing-teachers.md
agents/teachers/quality-rating-teacher/: pyproject.toml
agents/teachers/quality-rating-teacher/quality_rating_teacher/: __init__.py  teacher.py
perceptors/: creating-and-publishing-perceptors.md
